--- a/digestive-functors-aeson.cabal
+++ b/digestive-functors-aeson.cabal
@@ -27,12 +27,12 @@ library
   exposed-modules:
     Text.Digestive.Aeson
   build-depends:
-    aeson >= 0.7 && < 1.5,
+    aeson,
     base >= 4.5 && < 5,
     containers >= 0.5,
     digestive-functors >= 0.7 && < 0.9,
-    lens >= 4.4 && < 4.18,
-    lens-aeson >= 1 && < 1.1,
+    lens,
+    lens-aeson,
     safe >= 0.3.3,
     text >= 0.11,
     vector >= 0.10
